...
        launcherMultiplePermissions.launch(permissions)
      }
    }
  }

  Scaffold(
      modifier = Modifier.testTag("searchScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            selectedItem = navigationActions.currentRoute(),
            userViewModel,
            tripsViewModel)
      },
      floatingActionButton = {
        if (navigationActions.getNavigationState().currentTabForSearch ==
            FilterType.PLACES.ordinal) {
          FloatingActionButton(
              modifier = Modifier.testTag("toggleMapViewButton"),
              onClick = { isMapView = !isMapView }) {
                Icon(
                    imageVector = if (isMapView) Icons.Default.List else Icons.Default.Place,
                    contentDescription = if (isMapView) "Show List" else "Show Map")
              }
        }
      },
      floatingActionButtonPosition = FabPosition.Start) { pd ->
        val textFieldsColours = MaterialTheme.colorScheme.surfaceVariant

        Column(modifier = Modifier.padding(pd).fillMaxSize().testTag("searchScreenContent")) {
          Spacer(modifier = Modifier.height(24.dp))

          // Search bar
          Row(
              modifier = Modifier.testTag("searchBar"),
              verticalAlignment = Alignment.CenterVertically) {
                SearchBar(
                    placeholderId =
                        when (navigationActions.getNavigationState().currentTabForSearch) {
                          FilterType.PLACES.ordinal -> R.string.search_places
                          FilterType.USERS.ordinal -> R.string.search_users
...
                        },
                    onQueryChange = { query ->
                      searchQuery = TextFieldValue(query)
                      userViewModel.setQuery(query)
                      placesViewModel.setQuery(query, userLocation)
                    },
                    modifier = Modifier.padding(horizontal = 16.dp).testTag("searchTextField"))
              }
          // Tabs
          TabRow(
              modifier = Modifier.testTag("tabRow"),
              selectedTabIndex = navigationActions.getNavigationState().currentTabForSearch) {
                FilterType.values().forEachIndexed { index, filterType ->
                  Tab(
                      modifier = Modifier.testTag("filterButton_${filterType.name}"),
                      selected =
                          navigationActions.getNavigationState().currentTabForSearch ==
...
                        navigationActions.getNavigationState().currentTabForSearch =
                            filterType.ordinal
                      },
                      text = { Text(filterType.name) })
                }
                Tab(
                    modifier = Modifier.testTag("discoverTab"),
                    selected =
                        navigationActions.getNavigationState().currentTabForSearch ==
                            DISCOVER_PAGE_INDEX,
                    onClick = {
                      navigationActions.getNavigationState().currentTabForSearch =
                          DISCOVER_PAGE_INDEX
...
                  modifier =
                      Modifier.fillMaxSize()
                          .padding(16.dp)
                          .background(textFieldsColours, shape = MaterialTheme.shapes.large)
                          .testTag("searchResultsPlaces")) {
                    if (searchedPlaces.isEmpty()) {
                      item { NoResultsFound(modifier = Modifier.testTag("noResults")) }
                    } else {
                      items(searchedPlaces) { place ->
                        PlaceSearchResultItem(
                            place,
                            Modifier.clickable {
                              placesViewModel.selectPlace(place)
...
